<resources>
    <string name="app_name">Mascotas</string>

    <!--login-->
    <string name="dueno">Dueño Mascota</string>
    <string name="veterinario">Veterinario</string>

    <!--sign-->
    <string name="user">Nombre de Usuario</string>
    <string name="password">Contraseña</string>
    <string name="initSesion">Iniciar Sesión</string>

    <string name="forget">¿Olvidaste tus datos de inicio de sesión?</string>
    <string name="help_sign">Obten ayuda.</string>

    <string name="noAccount">¿No tienes cuenta?</string>
    <string name="registry">Regístrate</string>


    <!-- Registry -->
    <string name="title_registro">Registro de usuarios</string>
    <string name="name">Nombre(s)</string>
    <string name="last_name">Apellidos</string>
    <string name="phone">Teléfono</string>
    <string name="app">Apellido Paterno</string>
    <string name="apm">Apellido Materno</string>
    <string name="nickname">Nombre de usuario</string>
    <string name="overname">Usuario</string>
    <string name="emial">Correo</string>
    <string name="passwprd">Contraseña</string>
    <string name="validatepdw">Valida tu contraseña</string>
    <string name="photo">Foto</string>
    <string name="registry_button">Registrar</string>
    <string name="cedula">Cédula Profesional</string>

    <!--help-->
    <string name="title_help">Recuperar Usuario y Contraseña</string>
    <string name="label_help">Ingresa el correo con el que te registraste y te enviaremos una liga con tus datos para
        volver a acceder a Mascota.
    </string>
    <string name="button_help">Enviar</string>

    <!--main-->
    <string name="drawer_open">Open Navigation</string>
    <string name="drawer_close">Close Navigation</string>
    <string name="close_sesion">Cerrar Sesión</string>


    <!--pet-->
    <string name="welcome">Hola bienvenido,\nregistra a tu mascota</string>
    <string name="sex_1">Macho</string>
    <string name="sex_2">Hembra</string>
    <string name="date_born">Fecha de nacimiento</string>
    <string name="pet_title">Registro de Mascotas</string>
    <string name="pet_sub_title">Ingresa los datos de tu mascota.</string>
    <string name="pet_type">Tipo de mascota:</string>
    <string name="pet_name">Nombre</string>
    <string name="pet_race">Raza</string>
    <string name="pet_color">Color</string>
    <string name="pet_sex">Sexo de la mascota:</string>
    <string name="pet_size">Tamaño</string>
    <string name="pet_number">Número de Registro</string>
    <string name="pet_chip">No. Chip</string>
    <string name="pet_main_addr">Señas Particulares</string>
    <string name="pet_father">Padre</string>
    <string name="pet_mother">Madre</string>
    <string name="pet_allergy">Alergia</string>
    <string name="pet_conditions">Afecciones</string>
    <string name="pet_weight">Peso (KG)</string>
    <string name="pet_description">Descripción</string>
    <string name="pet_photo">Seleccionar foto</string>
    <string name="pet_registry">Registrar</string>

    <!--date-->
    <string name="date_welcome">Hola bienvenido,\n¡aún no tienes citas!</string>
    <string name="date_service">Servicio :</string>
    <string name="date_sub_service">Subservicio :</string>
    <string name="date_pet">Mascota :</string>
    <string name="date_type">Tipo :</string>
    <string name="date_observer">Observaciones :</string>
    <string name="date_recomends">Recomendaciones</string>
    <string name="date_n_vaccine">Número de Serie de la Vacuna</string>
    <string name="date_next_vaccine">Próxima Vacuna</string>
    <string name="date_reason_cancel"></string>
    <string name="date_day">Dia</string>
    <string name="date_hour">Hora</string>
    <string name="date_"></string>

    <!--history-->
    <string name="history_welcome">Hola bienvenido,\n¡aún no tienes citas!</string>

    <!--client-->
    <string name="client_welcome">Hola bienvenido,\n¡Aún no tienes Clientes!</string>

    <!--profile-->
    <string name="profile_name">Nombre</string>
    <string name="profile_last_name">Apellido Paterno</string>
    <string name="profile_email">Email</string>
    <string name="profile_telefo">Teléfono Celular</string>
    <string name="profile_button">Actualizar</string>
    <string name="profile_cedula">Cédula</string>

    <!--<string name="profile_"> </string>-->

    <!--menu dueño-->
    <string name="menu_mascotas">Mis mascotas</string>

    <!--búsqueda de servicios-->
    <string name="pet_services">Servicios</string>
    <string name="pet_veterinaria">Veterinaria</string>
    <string name="search">Buscar</string>
    <string name="location">Ubicación actual</string>
    <string name="pet_estetica">Estética</string>


    <!--Citas -->
    <string name="pet_ctas_medicas">Citas médicas</string>
    <string name="pet_ctas_higiene">Higiene</string>
    <string name="pet_ctas_vacunas">Vacunas</string>
    <!--Agenda citas-->
    <string name="pet_agenda_medica">Agendar cita médica</string>
    <string name="pet_listaVeterinarios">Médicos veterinarios</string>

    <!--Botones-->
    <string name="nextStep">Siguiente</string>


    <!--Citas-->
    <string name="cita_title">Registro de cita</string>
    <string name="pet_sub_cita">Ingresa los datos de la cita que desear agendar</string>
    <string name="pet_mascota">Mascota</string>
    <string name="pet_servicios">Servicio</string>
    <string name="service1">Baño</string>
    <string name="service2">Corte de pelo</string>
    <string name="service3">Limpieza de oídos</string>
    <string name="pet_veterinario">Veterinario</string>
    <string name="servicio_fecha">Fecha</string>
    <string name="servicio_mes">Mes</string>
    <string name="servicio_dia">Día</string>
    <string name="servicio_horario">Hora</string>
    <string name="pet_observaciones">Observaciones</string>

    <!--Veterinarios-->
    <string name="vet_title">Veterinarios</string>
    <string name="pet_sub_vet">Seleccione el veterinario con el que desea agendar cita</string>
    <string name="vet_mi_agenda">Mi agenda</string>
    <string name="date_welcome_owner">Hola, agenda una cita para tu mascota!</string>

    <!--Veterinarias-->
    <string name="diaInicio">Día inicio</string>
    <string name="diaFin">Día fin</string>
    <string name="horaInicio">Hora inicio</string>
    <string name="horaFin">Hora fin</string>


    <!--Datepicker-->

    <string name="titlulo_pickers">Obtener fecha y hora</string>

    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="formato_hora">hh:mm</string>


    <!--tip-->
    <string name="tip_welcome">Hola bienvenido,\naun no hay tips</string>
    <string name="pet_peso">Peso Kg</string>
    <string name="servicios">Servicios</string>
    <string name="sexo_de_la_mascota">Sexo de la mascota:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--<string name="tip_"></string>-->
</resources>
