<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="signViewModel" type="com.mx.mascotas.presentation.ui.login.sign.SignViewModel"/>
    </data>
    <ScrollView 
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="166dp" app:srcCompat="@drawable/mascota"
                    android:id="@+id/imageView"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
                    android:layout_marginStart="24dp" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp" android:layout_marginRight="24dp"/>
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" android:id="@+id/textInputLayout"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
                    android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp" android:layout_marginRight="24dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user" android:inputType="text" android:id="@+id/user_sign"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:passwordToggleEnabled="true"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout" android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
                    android:layout_marginStart="24dp" android:id="@+id/textInputLayout2">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password" android:inputType="textPassword" android:id="@+id/pwd_sign"/>
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup android:id="@+id/checks" android:layout_height="wrap_content" android:layout_width="0dp"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" android:layout_marginEnd="24dp"
                        android:layout_marginRight="24dp" android:layout_marginLeft="24dp"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginStart="24dp" android:layout_marginTop="8dp">
                <RadioButton
                        android:id="@+id/dueno_l"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:checked="true"
                        android:text="@string/dueno"/>

                <RadioButton
                        android:id="@+id/veterinario_l"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/veterinario"/>
            </RadioGroup>
            <Button
                    android:text="@string/initSesion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="24dp" android:layout_marginStart="24dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/checks" style="@style/Widget.AppCompat.Button.Colored"/>
            <TextView
                    android:text="@string/forget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView" android:layout_marginEnd="177dp" android:layout_marginRight="177dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="176dp" android:layout_marginStart="176dp" android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/button"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/help_sing" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" android:text="@string/help_sign" android:textStyle="bold"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#757575"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/textView4" android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp" android:layout_marginLeft="24dp" android:layout_marginStart="24dp"/>
            <TextView
                    android:text="@string/registry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/registry"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:textStyle="bold"/>
            <TextView
                    android:text="@string/noAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/registry"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>